Safer clear conditions

--- a/lovely/better_calc.toml
+++ b/lovely/better_calc.toml
@@ -1276,9 +1276,11 @@ target = 'card.lua'
 match_indent = true
 position = 'after'
 pattern = 'function Card:apply_to_run(center)'
-payload = '''local card_to_save = self and copy_card(self) or Card(0, 0, G.CARD_W, G.CARD_H, G.P_CARDS.empty, center)
-card_to_save.VT.x, card_to_save.VT.y = G.vouchers.T.x, G.vouchers.T.y
-G.vouchers:emplace(card_to_save)
+payload = '''
+    local card_to_save = self and copy_card(self) or Card(0, 0, G.CARD_W, G.CARD_H, G.P_CARDS.empty, center)
+    card_to_save.VT.x, card_to_save.VT.y = G.vouchers.T.x, G.vouchers.T.y
+    G.vouchers:emplace(card_to_save)
+    SMODS.enh_cache:clear()
 '''
 
 [[patches]]
