--- a/lovely/enhancement.toml
+++ b/lovely/enhancement.toml
@@ -292,7 +292,7 @@ position = "after"
 payload = "SMODS.enh_cache:clear()"
 match_indent = true
 
-# Reset enhancement cache on set_ability and set_base
+# Invalidate enhancement cache when card changes
 [[patches]]
 [patches.pattern]
 target = "card.lua"
@@ -305,6 +305,14 @@ match_indent = true
 [patches.pattern]
 target = "card.lua"
 pattern = "function Card:set_base(card, initial)"
+position = "after"
+payload = "SMODS.enh_cache:write(self, nil)"
+match_indent = true
+
+[[patches]]
+[patches.pattern]
+target = "card.lua"
+pattern = "function Card:set_seal(_seal, silent, immediate)"
 position = "after"
 payload = "SMODS.enh_cache:write(self, nil)"
 match_indent = true
