Additional changes to the SMODS.Font PR - Allow SMODS.Language to accept font key as string - Change control key from font to f - UI Additional Text Prop Priority changed to -10

--- a/lovely/ui_additional_text_props.toml
+++ b/lovely/ui_additional_text_props.toml
@@ -1,14 +1,14 @@
 [manifest]
 version = "1.2"
 dump_lua = true
-priority = 0
+priority = -10
 
 [[patches]]
 [patches.pattern]
 target = "functions/misc_functions.lua"
 pattern = """              spacing = math.max(0, 0.32*(17 - #assembled_string)),"""
 position = "after"
-payload = """font = SMODS.Fonts[part.control.font] and SMODS.Fonts[part.control.font] or (tonumber(part.control.font) and G.FONTS[tonumber(part.control.font)]),"""
+payload = """font = SMODS.Fonts[part.control.f] and SMODS.Fonts[part.control.f] or (tonumber(part.control.f) and G.FONTS[tonumber(part.control.f)]),"""
 overwrite = true
 match_indent = true
 
@@ -17,7 +17,7 @@ match_indent = true
 target = "functions/misc_functions.lua"
 pattern = """            spacing = _spacing,"""
 position = "after"
-payload = """font = SMODS.Fonts[part.control.font] and SMODS.Fonts[part.control.font] or (tonumber(part.control.font) and G.FONTS[tonumber(part.control.font)]),"""
+payload = """font = SMODS.Fonts[part.control.f] and SMODS.Fonts[part.control.f] or (tonumber(part.control.f) and G.FONTS[tonumber(part.control.f)]),"""
 overwrite = true
 match_indent = true
 
@@ -26,7 +26,7 @@ match_indent = true
 target = "functions/misc_functions.lua"
 pattern = """                text = assembled_string,"""
 position = "after"
-payload = """font = SMODS.Fonts[part.control.font] and SMODS.Fonts[part.control.font] or (tonumber(part.control.font) and G.FONTS[tonumber(part.control.font)]),"""
+payload = """font = SMODS.Fonts[part.control.f] and SMODS.Fonts[part.control.f] or (tonumber(part.control.f) and G.FONTS[tonumber(part.control.f)]),"""
 overwrite = true
 match_indent = true
 
