--- a/lovely/ui_additional_text_props.toml
+++ b/lovely/ui_additional_text_props.toml
@@ -38,7 +38,7 @@ position = "at"
 payload = """
 loc_target = loc_target or {}
 if pcall(function() loc_target.name_parsed = {loc_parse_string(G.localization.descriptions[(args.set or args.node.config.center.set)][args.key or args.node.config.center.key].name)} end) then
-else loc_target.name_parsed = {{{ strings = { "ERROR" }, control = {}}}} end"""
+else loc_target.name_parsed = {} end"""
 overwrite = true
 match_indent = true
 
