add context.other_card.can_calculate check to eval_card patch

--- a/lovely/better_calc.toml
+++ b/lovely/better_calc.toml
@@ -42,7 +42,7 @@ function eval_card(card, context)
         end
         return {}, {}
     end
-    if context.other_card and not context.other_card:can_calculate(context.ignore_debuff) then return {}, {} end
+    if context.other_card and context.other_card.can_calculate and not context.other_card:can_calculate(context.ignore_debuff) then return {}, {} end
     local ret = {}
 '''
 
