revise RESTART_MUSIC patch

--- a/lovely/sound.toml
+++ b/lovely/sound.toml
@@ -132,29 +132,26 @@ position = 'at'
 payload = 'RESTART_MUSIC(request)'
 
 [[patches]]
-[patches.regex]
+[patches.pattern]
 target = 'engine/sound_manager.lua'
-pattern = """(?<indent>[\t ]*)function RESTART_MUSIC\\(args\\)(\n.*){14}"""
-line_prepend = '$indent'
+pattern = '''SOURCES[k] = {}
+            args.per = 0.7'''
+match_indent = true
 position = 'at'
-payload = """function RESTART_MUSIC(args)
-    for k, v in pairs(SOURCES) do
-        if string.find(k,'music') then
-            for i, s in ipairs(v) do
-                s.sound:stop()
-            end
-            SOURCES[k] = {}
+payload = '''SOURCES[k] = {}
             if not SMODS_Sounds[k] or k == args.desired_track then
-                args.per = 0.7
-                args.vol = 0.6
-                args.sound_code = k
-                local s = PLAY_SOUND(args)
-                if s then s.initialized = true end
-            end
-        end
-    end
-  end
-"""
+            args.per = 0.7'''
+
+[[patches]]
+[patches.pattern]
+target = 'engine/sound_manager.lua'
+pattern = '''local s = PLAY_SOUND(args)
+            s.initialized = true'''
+match_indent = true
+position = 'at'
+payload = '''local s = PLAY_SOUND(args)
+            if s then s.initialized = true end
+            end'''
 
 # fix looping for music of different length
 
